add adapter tests for apache 2.2 and apache 2.4

--- a/tests/assets/apache22_startpage.html
+++ b/tests/assets/apache22_startpage.html
@@ -53,5 +53,49 @@
     </tr>
 </table>
 <hr/>
+<h3>LoadBalancer Status for balancer://frontend</h3>
+
+
+<table border="0" style="text-align: left;">
+    <tr>
+        <th>StickySession</th>
+        <th>Timeout</th>
+        <th>FailoverAttempts</th>
+        <th>Method</th>
+    </tr>
+    <tr>
+        <td> -</td>
+        <td>0</td>
+        <td>0</td>
+        <td>bybusyness</td>
+</table>
+<br/>
+
+<table border="0" style="text-align: left;">
+    <tr>
+        <th>Worker URL</th>
+        <th>Route</th>
+        <th>RouteRedir</th>
+        <th>Factor</th>
+        <th>Set</th>
+        <th>Status</th>
+        <th>Elected</th>
+        <th>To</th>
+        <th>From</th>
+    </tr>
+    <tr>
+        <td><a href="/balancer?b=frontend&w=http://192.168.1.1&nonce=84b985a4-7f4b-42bc-ab61-07b6ac7b0ccd">http://192.168.1.1</a>
+        </td>
+        <td></td>
+        <td></td>
+        <td>1</td>
+        <td>0</td>
+        <td>Ok</td>
+        <td>12</td>
+        <td>4.7K</td>
+        <td>2.4K</td>
+    </tr>
+</table>
+<hr/>
 </body>
 </html>
